fix(calendar): fix part years-range using wrong color

--- a/src/components/calendar/themes/shared/bootstrap/calendar.bootstrap.scss
+++ b/src/components/calendar/themes/shared/bootstrap/calendar.bootstrap.scss
@@ -83,7 +83,7 @@ $theme: $bootstrap;
 }
 
 [part='years-range'] {
-    color: var-get($theme, 'navigation-color');
+    color: var-get($theme, 'picker-foreground');
 }
 
 [part~='navigation'] {
