--- a/src/components/calendar/themes/shared/fluent/calendar.fluent.scss
+++ b/src/components/calendar/themes/shared/fluent/calendar.fluent.scss
@@ -78,7 +78,7 @@ $theme: $fluent;
 }
 
 [part='years-range'] {
-    color: var-get($theme, 'navigation-color');
+    color: var-get($theme, 'picker-foreground');
 }
 
 [part~='months-navigation'],
