--- a/src/components/calendar/themes/shared/indigo/calendar.indigo.scss
+++ b/src/components/calendar/themes/shared/indigo/calendar.indigo.scss
@@ -113,6 +113,10 @@ $theme: $indigo;
     @include type-style('subtitle-2');
 }
 
+[part='years-range'] {
+    color: var-get($theme, 'picker-foreground');
+}
+
 [part='header-title'] {
     @include type-style('body-2');
 }
