--- a/src/components/calendar/themes/shared/material/calendar.material.scss
+++ b/src/components/calendar/themes/shared/material/calendar.material.scss
@@ -100,6 +100,10 @@ $theme: $material;
     @include type-style('subtitle-1');
 }
 
+[part='years-range'] {
+    color: var-get($theme, 'picker-foreground');
+}
+
 [part='header-title'] {
     @include type-style('overline');
 }
